--- a/arch/arm64/configs/spes-perf_defconfig
+++ b/arch/arm64/configs/spes-perf_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-AscenderSU-v0.6"
+CONFIG_LOCALVERSION="-FanslySU-v0.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -491,6 +491,7 @@ CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_UEVENT=y
 CONFIG_USB_CONFIGFS_NCM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
@@ -750,3 +751,6 @@ CONFIG_DEBUG_FS=y
 CONFIG_SLUB_DEBUG=n
 CONFIG_SERIAL_EARLYCON=y
 CONFIG_SERIAL_CORE=y
+
+# Cpu Frequencies Statistics
+CONFIG_CPU_FREQ_STAT=y
